@@ -18,8 +18,8 @@ public class JsonTest {
     private static Staff getStaff() {
         List<String> position = Arrays.asList("manager", "hr");
 
-//        java.util.List<String> skills = new ArrayList<>(java.util.List.of("foo", "bar")); java 11
-        java.util.List<String> skills = new ArrayList<>(Arrays.asList("foo", "bar"));
+//        List<String> skills = List.of("foo", "bar"); //java 11
+        List<String> skills = new ArrayList<>(Arrays.asList("foo", "bar"));
 
         Map<String, Integer> salary = new HashMap<>();
         salary.put("abc", 10000);
